tests/ui/feature-gates/feature-gate-no_sanitize.rs
#[no_sanitize(address)]
//~^ ERROR the `#[no_sanitize]` attribute is an experimental feature
fn main() {
}
